Example/GTNetWork/GTNetWorkConstants.m
//
//  GTConstants.m
//  GTNetWork
//
//  Created by 郭通 on 17/1/10.
//  Copyright © 2017年 郭通. All rights reserved.
//

#import "GTNetWorkConstants.h"

// error
NSInteger const kDMErrorNormalCode      = -1;
NSString* const kDMErrorUserInfoMsgKey = @"errorMsg";
NSString* const kDMErrorUserInfoMsgCode = @"errorCode";
